# python1.2

./: a_python_quest01.py  addlist.py  da.txt  madlibs.py  main.py  number_guess.py  pyproject.toml  pythonquest.txt  pythonquest_score.txt  random.py  to-do  web_scrap.py  web_scrape.py  webscrap.txt  word_cloud.py  word_cloud1.py
Projects Done/: returnz.py  test1.py  web_scrap.py
